--- a/views/macros.njk
+++ b/views/macros.njk
@@ -9,7 +9,7 @@
 {% macro addDaysAgo (date) %}
    {% set value = date | daysAgo %}
       {% if value %}
-         <br><span class="days-ago">({{ value }})</span>
+         <span class="days-ago">({{ value }})</span>
       {% endif %}
 {% endmacro %}
 
