--- a/views/tabs/tab-prodowner.njk
+++ b/views/tabs/tab-prodowner.njk
@@ -112,7 +112,7 @@
                   <!--  4 --><th class="row-header-title header-ecs" id="col-head-ecs-stag"     data-type="string"><span>staging</span></th>
                   <!--  5 --><th class="row-header-title header-ecs" id="col-head-ecs-live"     data-type="string"><span>live</span></th>
                   <!--  6 --><th class="row-header-title header-git" id="col-head-git-lang"     data-type="string">Runtime</th>
-                  <!--  7 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-coverage" data-type="string"><span>Sonar</span></th>
+                  <!--  7 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-coverage" data-type="number"><span>Sonar</span></th>
                   <!--  8 --><th class="row-header-title header-deptrack"     id="col-head-deptk-date"     data-type="number">Dep Track</th>
             </tr>
          </thead>
