renamed styles.css -> common.css

--- a/views/main.njk
+++ b/views/main.njk
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <title>{{ title }}</title>
-   <link rel="stylesheet" href="{{basePath}}/css/styles.css">
+   <link rel="stylesheet" href="{{basePath}}/css/common.css">
    <script> window.compressedState = "{{ compressedState | default('') }}"; </script>
    <script src="{{basePath}}/js/libs/pako/2.0.4/pako.min.js"></script>
    <script src="{{basePath}}/js/common.js"></script>
