--- a/views/tabs/tab-services.njk
+++ b/views/tabs/tab-services.njk
@@ -82,16 +82,16 @@
                   <!--  5 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-coverage" data-type="string"><span>Coverage</span></th>
                   <!--  7 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-bugs"     data-type="number"><span>Bugs</span></th>
                   <!--  8 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-csmell"   data-type="number"><span>Code smell</span></th>
-                  <!--  9 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-vul"      data-type="number"><span>Vulnerabilities</span></th>
+                  <!--  9 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-vul"      data-type="number"><span>Vulner.</span></th>
 
-                  <!-- 10 --><th class="row-header-title header-version" id="col-head-deptk-version"   data-type="string"> Version</th>
-                  <!-- 11 --><th class="row-header-title header-version" id="col-head-deptk-runtime"   data-type="string"> Runtime</th>
+                  <!-- 10 --><th class="row-header-title header-version" id="col-head-deptk-version"   data-type="string">(SBOM) Version</th>
+                  <!-- 11 --><th class="row-header-title header-version" id="col-head-deptk-runtime"   data-type="string">Runtime</th>
 
                   <!-- 12 --><th class="row-header-title header-ecs" id="col-head-ecs-cidev"   data-type="string"><span>cidev</span></th>
                   <!-- 13 --><th class="row-header-title header-ecs" id="col-head-ecs-stag"    data-type="string"><span>staging</span></th>
                   <!-- 14 --><th class="row-header-title header-ecs" id="col-head-ecs-live"    data-type="string"><span>live</span></th>
 
-                  <!-- 15 --><th class="row-header-title header-deptrack"  id="col-head-deptk-date" data-type="date"  >Last BOM</th>
+                  <!-- 15 --><th class="row-header-title header-deptrack"  id="col-head-deptk-date" data-type="date">(SBOM) date</th>
                   <!-- 16 --><th class="row-header-title header-deptrack header-dt-metric" id="col-head-deptk-mcrit" data-type="number"><span>Critical</span></th>
                   <!-- 17 --><th class="row-header-title header-deptrack header-dt-metric" id="col-head-deptk-mhigh" data-type="number"><span>High</span></th>
                   <!-- 18 --><th class="row-header-title header-deptrack header-dt-metric" id="col-head-deptk-mmed"  data-type="number"><span>Medium</span></th>
