--- a/public/css/tab-prodowner.css
+++ b/public/css/tab-prodowner.css
@@ -1,96 +1,22 @@
-/* public/css/tab/tab-services.css */
-
-.tab-container-main-col thead tr:nth-child(2) th {
-  top: 40px; /* value based on the height of the first row */
-  z-index: 4; /* This ensures the second row stays above the first */
-}
-
-
-.group-header {
-      font-size: 14px;
-
-      /* define height for group header row for better alignment */
-      height: 40px;
-    }
-    .group-service,
-    .group-sonar,
-    .group-ecs {
-      background-color: #e1b4b4;
-    }
-
-    .group-git,
-    .group-version,
-    .group-deptrack {
-      background-color: #f6a8a8;
-    }
-
-   .header-service,
-   .header-sonar-metric,
-   .header-ecs {
-      background-color: #9e9c9c;
-   }
-
-   .header-git,
-   .header-version,
-   .header-deptrack {
-      background-color: #c7c6c6;
-   }
-
-/* ------------ CSS FOR TABLE HEADER ------------ */
-.header-sonar-metric span,
-.header-ecs span,
-.header-dt-metric span {
-   writing-mode: vertical-rl;
-   transform: scale(1);
-}
+/* public/css/tab/tab-prodowner.css */
 
 /* ------------ CSS FOR TABLE TD ------------ */
-.td-name a,
-.td-git-owner a,
-.td-git-lang a,
-.td-git-version a,
-.td-git-date a,
-.td-ecs a {
-   /* color: rgb(0, 0, 0); */
-   text-decoration: none;
-}
-.td-name a {
-   font-size: 10px;
-   color: rgb(224, 118, 52);
-}
-.td-version {
-   font-size: 12px;
-   background-color: #ddd;
-   color: rgb(224, 118, 52);
-}
-.deptrack-link,
-.sonar-link  {
-   text-decoration: none;
-   color: inherit; /* Inherit color from parent */
-}
 .tab-container-main-col td {
    border: 1px solid #353030;
 }
 
 /* ------------ CSS FOR RUNTIME LIST ------------ */
 
-.td-git-version-info,
-.td-runtime-info {
-  margin-left: 0;     /* Remove left margin */
-  padding-left: 0px;  /* Reduce left padding (or set to 0 for no indentation) */
-  list-style-position: inside; /* Ensure bullet points align with the text */
- }
-
-.td-git-version-red,
-.td-runtime-info-red {
+.td-git-version-info .td-git-version-red,
+.td-runtime-info .td-runtime-info-red {
   color: red;
 }
-.td-git-version-yellow,
-.td-runtime-info-yellow {
+.td-git-version-info .td-git-version-yellow,
+.td-runtime-info .td-runtime-info-yellow {
   color: orange;
 }
-.td-git-version-green,
-.td-runtime-info-green
+.td-git-version-info .td-git-version-green,
+.td-runtime-info .td-runtime-info-green
  {
   color: green;
 }
