--- a/views/tabs/tab-services.njk
+++ b/views/tabs/tab-services.njk
@@ -34,35 +34,35 @@
          <!-- Headers for Col groups -->
             <tr>
                <th class="group-header group-service"  colspan="1"></th>
+               <th class="group-header group-version"  colspan="3">Version info</th>
                <th class="group-header group-git"      colspan="4">Git info</th>
                <th class="group-header group-sonar"    colspan="4">Sonar</th>
-               <th class="group-header group-version"  colspan="2">Version info</th>
                <th class="group-header group-ecs"      colspan="3">ECS</th>
-               <th class="group-header group-deptrack" colspan="7">Dependency Track</th>
+               <th class="group-header group-deptrack" colspan="6">Dependency Track</th>
             </tr>
          <!-- header row with filter dropdown -->
             <tr>
                   <!--  1 --><th class="row-header-select"></th>
 
-                  <!--  2 --><th class="row-header-select">{{ dropdownFilter(documents, "gitInfo.owner", "select-owner") }}</th>
-
+                  <!--  2 --><th class="row-header-select"></th>
                   <!--  3 --><th class="row-header-select"></th>
                   <!--  4 --><th class="row-header-select"></th>
-                  <!--  5 --><th class="row-header-select"></th>
 
-                  <!--  5 --><th class="row-header-select"></th>
+                  <!--  5 --><th class="row-header-select">{{ dropdownFilter(documents, "gitInfo.owner", "select-owner") }}</th>
+
+                  <!--  6 --><th class="row-header-select"></th>
                   <!--  7 --><th class="row-header-select"></th>
                   <!--  8 --><th class="row-header-select"></th>
-                  <!--  9 --><th class="row-header-select"></th>
 
+                  <!--  9 --><th class="row-header-select"></th>
                   <!-- 10 --><th class="row-header-select"></th>
                   <!-- 11 --><th class="row-header-select"></th>
-
                   <!-- 12 --><th class="row-header-select"></th>
+
                   <!-- 13 --><th class="row-header-select"></th>
                   <!-- 14 --><th class="row-header-select"></th>
-
                   <!-- 15 --><th class="row-header-select"></th>
+
                   <!-- 16 --><th class="row-header-select"></th>
                   <!-- 17 --><th class="row-header-select"></th>
                   <!-- 18 --><th class="row-header-select"></th>
@@ -74,24 +74,24 @@
             <tr>
                   <!--  1 --><th class="row-header-title header-service" id="col-head-service" data-type="string"> Service</th>
 
-                  <!--  2 --><th class="row-header-title header-git" id="col-head-git-owner"    data-type="string"> Owner</th>
-                  <!--  3 --><th class="row-header-title header-git" id="col-head-git-lang"     data-type="string"> Lang</th>
-                  <!--  4 --><th class="row-header-title header-git" id="col-head-git-rel-last" data-type="string"> Last Release</th>
-                  <!--  5 --><th class="row-header-title header-git" id="col-head-git-rel-date" data-type="date">   Date</th>
+                  <!--  2 --><th class="row-header-title header-version" id="col-head-deptk-version"   data-type="string">(SBOM) Version</th>
+                  <!--  3 --><th class="row-header-title header-deptrack"  id="col-head-deptk-date" data-type="date">(SBOM) date</th>
+                  <!--  4 --><th class="row-header-title header-version" id="col-head-deptk-runtime"   data-type="string">Runtime</th>
 
-                  <!--  5 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-coverage" data-type="string"><span>Coverage</span></th>
-                  <!--  7 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-bugs"     data-type="number"><span>Bugs</span></th>
-                  <!--  8 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-csmell"   data-type="number"><span>Code smell</span></th>
-                  <!--  9 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-vul"      data-type="number"><span>Vulner.</span></th>
 
-                  <!-- 10 --><th class="row-header-title header-version" id="col-head-deptk-version"   data-type="string">(SBOM) Version</th>
-                  <!-- 11 --><th class="row-header-title header-version" id="col-head-deptk-runtime"   data-type="string">Runtime</th>
+                  <!--  5 --><th class="row-header-title header-git" id="col-head-git-owner"    data-type="string"> Owner</th>
+                  <!--  6 --><th class="row-header-title header-git" id="col-head-git-lang"     data-type="string"> Lang</th>
+                  <!--  7 --><th class="row-header-title header-git" id="col-head-git-rel-last" data-type="string"> Last Release</th>
+                  <!--  8 --><th class="row-header-title header-git" id="col-head-git-rel-date" data-type="date">   Date</th>
 
-                  <!-- 12 --><th class="row-header-title header-ecs" id="col-head-ecs-cidev"   data-type="string"><span>cidev</span></th>
-                  <!-- 13 --><th class="row-header-title header-ecs" id="col-head-ecs-stag"    data-type="string"><span>staging</span></th>
-                  <!-- 14 --><th class="row-header-title header-ecs" id="col-head-ecs-live"    data-type="string"><span>live</span></th>
+                  <!--  9 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-coverage" data-type="string"><span>Coverage</span></th>
+                  <!-- 10 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-bugs"     data-type="number"><span>Bugs</span></th>
+                  <!-- 11 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-csmell"   data-type="number"><span>Code smell</span></th>
+                  <!-- 12 --><th class="row-header-title header-sonar-metric" id="col-head-sonar-vul"      data-type="number"><span>Vulner.</span></th>
+                  <!-- 13 --><th class="row-header-title header-ecs" id="col-head-ecs-cidev"   data-type="string"><span>cidev</span></th>
+                  <!-- 14 --><th class="row-header-title header-ecs" id="col-head-ecs-stag"    data-type="string"><span>staging</span></th>
+                  <!-- 15 --><th class="row-header-title header-ecs" id="col-head-ecs-live"    data-type="string"><span>live</span></th>
 
-                  <!-- 15 --><th class="row-header-title header-deptrack"  id="col-head-deptk-date" data-type="date">(SBOM) date</th>
                   <!-- 16 --><th class="row-header-title header-deptrack header-dt-metric" id="col-head-deptk-mcrit" data-type="number"><span>Critical</span></th>
                   <!-- 17 --><th class="row-header-title header-deptrack header-dt-metric" id="col-head-deptk-mhigh" data-type="number"><span>High</span></th>
                   <!-- 18 --><th class="row-header-title header-deptrack header-dt-metric" id="col-head-deptk-mmed"  data-type="number"><span>Medium</span></th>
@@ -110,6 +110,17 @@
                            <!-- 1st Column (link) -->
                            <td class="td-name"><a href="{{ document.gitInfo.repo }}">{{ document.name }}</a></td>
 
+                           <!-- 3 Columns Version/Date & Runtime-->
+                           <td class="td-version">{{ version.version }}</td>
+                           <td class="td-bom-import"><span>{{ depTrackLink(depTrackUri, version.lastBomImport | date("YYYY-MM-DD"), version.uuid) }}</span><br>{{addDaysAgo( version.lastBomImport ) }}</td>
+                           <td class="td-runtime">
+                              {% if version.runtime.length > 1 %}
+                                 <ul class="td-runtime-info"> {% for info in version.runtime %} {% if info %}<li>{{ info }}</li> {% endif %}{% endfor %} </ul>
+                              {% else %}
+                                 {{ version.runtime[0] }}
+                              {% endif %}
+                           </td>
+
                            <!-- 4 Columns (Git info)-->
                            <td class="td-git-owner">     <a href="{{ document.gitInfo.repo }}/custom-properties">{{ document.gitInfo.owner }}</a></td>
                            <td class="td-git-lang">      {{setLanguage(version.lang, document.gitInfo.lang, document.gitInfo.repo) }}</td>
@@ -122,23 +133,12 @@
                            <td class="td-sonar-metrics">{{ sonarLink(sonarUri, document.sonarKey, document.sonarMetrics.code_smells, "code smells") }}</td>
                            <td class="td-sonar-metrics">{{ sonarLink(sonarUri, document.sonarKey, document.sonarMetrics.vulnerabilities, "vulnerabilities") }}</td>
 
-                           <!-- 2 Columns Version & Runtime-->
-                           <td class="td-version">{{ version.version }}</td>
-                           <td class="td-runtime">
-                              {% if version.runtime.length > 1 %}
-                                 <ul class="td-runtime-info"> {% for info in version.runtime %} {% if info %}<li>{{ info }}</li> {% endif %}{% endfor %} </ul>
-                              {% else %}
-                                 {{ version.runtime[0] }}
-                              {% endif %}
-                           </td>
-
                            <!-- 3 Columns ECS -->
                            <td class="td-ecs"> {% for version in document.ecs.cidev %}   {% if version %}<li>{{ version.version }}</li> {% endif %}{% endfor %} </td>
                            <td class="td-ecs"> {% for version in document.ecs.staging %} {% if version %}<li>{{ version.version }}</li> {% endif %}{% endfor %} </td>
                            <td class="td-ecs"> {% for version in document.ecs.live %}    {% if version %}<li>{{ version.version }}</li> {% endif %}{% endfor %} </td>
 
-                           <!-- 7 Columns Dep Track (Version specific) -->
-                           <td class="td-bom-import"><span>{{ depTrackLink(depTrackUri, version.lastBomImport | date("YYYY-MM-DD"), version.uuid) }}</span><br>{{addDaysAgo( version.lastBomImport ) }}</td>
+                           <!-- 6 Columns Dep Track (Version specific) -->
                            <td class="td-critical">
                               {{DepTrackMetrics(depTrackUri, version.metrics.critical, "critical", version.uuid)}}
                            </td>
